[package]
name = "qd"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
